# Scouter

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  AUDIT.md  CLAUDE.md  CODEX.md  DESIGN.md  GEMINI.md  IDENTITY.md  LICENSE  Makefile  README.md  SOUL.md  TOOLS.md  USER.md  Vincular  alembic.ini  bootstrap.ps1  bootstrap.sh  celerybeat-schedule  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/commands/: agent-os.md  new-component.md  new-endpoint.md  new-page.md  preflight.md  stack.md  test.md  ux-guidelines.md
.codex/commands/: new-task.md  repo-architecture-audit.md  ux-guidelines.md
.gemini/commands/: agent-os.md  new-component.md  new-page.md  preflight.md  repo-deep-audit.md  stack.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0a5e3d4ec721_add_auto_pipeline_enabled_to_.py  0f5fef81f0ae_add_task_tracking_tables.py  2b6d8800aef8_add_outreach_deliveries.py  3d2cd2387bc3_add_partial_unique_index_on_outreach_.py  4f1af5d99c4e_add_reply_assistant_reviews.py  5afc0aaf6860_add_telegram_audit_log_table.py  5e607b7a54b4_add_signature_is_solo_to_settings.py  5fddff92305a_add_whatsapp_audit_log.py  64d90f18d551_add_composite_indexes_on_leads.py  694f94aae1c8_add_batch_reviews_and_improvement_.py  6fbd83294e65_add_retry_count_to_pipeline_run_and_.py  76d4256f1920_add_openclaw_config_fields.py  78f91948b49b_add_notifications_whatsapp_credentials_.py  7b6610f5b7e6_expand_status_contract_enums.py  8cd3ff7af6e0_add_unique_constraints_on_suppression_.py  955a04d99157_initial_schema.py  9d4e1a2b7c3d_add_reply_assistant_sends.py  a0d285b111e7_merge_migration_heads.py  a1b2c3d4e5f6_add_operational_settings.py  a1b2c3d4e5f7_add_draft_channel.py  a2b3c4d5e6f7_add_research_report_artifact_signal_confidence.py  a2b3c4d5e6f8_add_commercial_brief.py  a5cc6250a134_add_webhook_secret_to_whatsapp_.py  ab12cd34ef56_add_growth_decision_logs.py  b06815d91943_add_lat_lng_to_leads.py  b2c3d4e5f6a7_add_google_maps_fields_to_leads.py  b2c3d4e5f6a8_add_wa_outreach_enabled.py  b3c8d7e9f1a2_add_operational_settings.py  b3d8a9b3c6f1_add_inbound_classification_trace.py  b4c5d6e7f8a9_add_outreach_generation_metadata.py  b5a27898773e_add_fk_indexes_on_lead_signals_.py  b71498a9548a_add_llm_quality_to_leads.py  b9a5c4095864_add_website_error_signal_type.py  bc23de45fa78_add_territory_performance_snapshots.py  c1d2e3f4a5b6_add_chat_tables.py  c3d4e5f6a7b9_drop_allow_openclaw_briefs.py  c4e9a7d31b88_add_integration_credentials.py  c6d7e8f9a0b1_add_operational_state_fields_to_task_runs.py  c8b6e42d1f9a_add_reply_assistant_drafts.py  cda23d64089b_add_crawl_tracking_fields_to_territory.py  (+19 more)
app/: main.py
app/agent/: __init__.py  channel_router.py  core.py  events.py  hermes_format.py  prompts.py  research_agent.py  scout_prompts.py  scout_tools.py  streaming_client.py  tool_registry.py
app/api/: auth.py  deps.py  request_context.py  router.py
app/core/: config.py  crypto.py  logging.py
app/crawlers/: base_crawler.py  google_maps_crawler.py  instagram_scraper.py
app/data/: cities_ar.py
app/db/: session.py
app/llm/: PROMPTS.md  PROMPT_INDEX.md  __init__.py  catalog.py  client.py  contracts.py  cost_estimation.py  invocation_metadata.py  prompt_registry.py  prompts.py  resolver.py  roles.py  sanitizer.py  types.py
app/mail/: __init__.py  imap_provider.py  inbound_provider.py  provider.py  (+1 more)
dashboard/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json  playwright.config.cjs  vitest.config.ts
docs/: README.md  SECURITY_AUDIT_PENDING.md  architecture-audit.md  clawscout_propuesta.md  linux-first.md  refactor-roadmap.md  target-architecture.md
scripts/: README.md  browserctl.py  check_secrets.py  clawscout.sh  clawscoutctl.py  dev-down.sh  dev-status.sh  dev-up.sh  ensure-ollama-bridge.ps1  ensure-ollama-bridge.sh  env-backup.sh  export.sh  import.sh  init.sh  mailctl.py  migrate-legacy-stack.sh  opsctl.py  preflight.py  render-openclaw-config.sh  scouter.sh  scouterctl.py  seed.py  start-local-stack.sh  sync-enums.py  sync-proxy-allowlist.py  validate-openclaw-grounding.sh
skills/: MODEL_ROUTING.md
tests/: conftest.py  helpers.py  test_agent_core.py  test_ai_invocations.py  test_ai_workspace.py  test_api_ai_office.py  test_api_batch_reviews.py  test_api_crawl.py  test_api_credentials.py  test_api_dashboard.py  test_api_inbound_classification.py  test_api_inbound_mail.py  test_api_lead_timeline.py  test_api_leader.py  test_api_leads.py  test_api_mail.py  test_api_messaging.py  test_api_outreach.py  test_api_performance.py  test_api_reply_assistant.py  test_api_reply_assistant_review.py  test_api_reviews.py  test_api_settings.py  test_api_setup.py  test_api_tasks.py  test_api_territories.py  test_api_webhooks.py  test_arch_guardrails.py  test_auto_replenish.py  test_auto_send_template.py  test_batch_workflow.py  test_beat_task_retries.py  test_brief.py  test_celery_integration.py  test_chat_api.py  test_closer_service.py  test_context_service.py  test_cross_language_sync.py  test_crypto.py  test_dashboard_aggregations.py  (+28 more)
(+582 files in other folders)
