[project]
name = "clawscout"
version = "0.1.0"
description = "Private lead prospecting system for web development services"
requires-python = ">=3.12,<3.15"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "slowapi>=0.1.9",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.9",
    # Config & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # Redis
    "redis>=5.2.0",
    # HTTP client
    "httpx>=0.28.0",
    # Scraping
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    # Logging
    "structlog>=24.4.0",
    # Retries
    "tenacity>=9.0.0",
    # Encryption
    "cryptography>=42.0.0",
    # Metrics
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Export
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
playwright = [
    "playwright>=1.49.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "S"]
ignore = ["S101", "S104"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
