[project]
name = "scouter"
version = "0.1.0"
description = "Private lead prospecting system for web development services"
requires-python = ">=3.12,<3.15"
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "slowapi>=0.1.9",
    # Database
    "sqlalchemy>=2.0.36",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.9",
    # Config & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Task queue
    "celery[redis]>=5.4.0",
    # Redis
    "redis>=5.2.0",
    # HTTP client
    "httpx>=0.28.0",
    # Scraping
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    # Logging
    "structlog>=24.4.0",
    # Retries
    "tenacity>=9.0.0",
    # Encryption
    "cryptography>=42.0.0",
    # Metrics
    "prometheus-fastapi-instrumentator>=7.0.0",
    # Export
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.14.0",
]
playwright = [
    "playwright>=1.49.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Canonical ruleset. CI + pre-commit read this — do not re-declare select in either.
# Tiered up from F/W/I to include UP, SIM, N, S, B, E after the autopilot
# hardening pass cleared or scoped the violations. See docs/plans/hardening-backlog.md
# for the remaining backlog (B904, some B008 cases) and the order to tighten further.
select = ["F", "W", "I", "UP", "SIM", "N", "S", "B", "E"]
ignore = []

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert, hardcoded test credentials, and long data literals.
"tests/**/*.py" = [
    "S101",   # assert is the pytest idiom
    "S105",   # hardcoded password strings in test fixtures
    "S106",   # hardcoded password in function arguments (test factories)
    "S110",   # try-except-pass in negative-path tests
    "S112",   # try-except-continue in loop-based integration tests
    "E501",   # long literals (JSON blobs, scoring expectations)
    "B008",   # function-call-in-default-argument (test factories / Depends)
]
# LLM prompt files intentionally contain multi-line prompt strings whose
# readability matters more than the 100-char line length.
"app/llm/prompts/*.py" = ["E501"]
# FastAPI uses Depends() and Query()/Path()/Body() as default arguments by design.
"app/api/**/*.py" = ["B008"]
# FastAPI main.py uses conditional imports after middleware setup for optional
# integrations (Prometheus, auth middleware) — the pattern is load-order-sensitive.
# Also uses Depends() in default args for health endpoints (same pattern as api/).
"app/main.py" = ["E402", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]

[tool.mypy]
python_version = "3.12"
# CI runs two mypy steps:
#   1. Full scan (advisory, || true) — tracks total error count.
#   2. Strict subset (hard fail) — the following modules MUST stay clean:
#        app/core/  app/db/  app/data/  app/mail/  app/crawlers/
#        app/schemas/  app/models/  app/llm/
#      (100 source files.)  Add more modules as they are cleaned up.
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
